# Project-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0596b4bcab1c_create_project_table.py  197472701658_seed_initial_data.py  489a57caa991_add_constraint.py  51729ec15902_add_employee_and_assignment.py  7b9a2a10f4c1_add_timestamps_to_core_tables.py  f021b607d334_init_project_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: assignments.py  employees.py  projects.py
app/core/: database.py  redis_client.py
app/models/: __init__.py  assignment.py  base.py  employee.py  project.py
app/schemas/: assignment.py  employee.py  project.py
app/services/: assignment_service.py  employee_service.py  project_service.py
app/utils/: enum.py
